# team6-usecase4

./: .gitignore  README.md  data.json  design-notes.md  docker-compose.yml  main.py  pyproject.toml  select-group.py  tut-models-azure-oai.py  tut-user-proxy-agent.py
FE/: Dockerfile  README.md  package-lock.json  package.json
FE/public/: e8.json  entra_ism_ml2_technical_aligned.json
FE/src/: App.vue  main.ts  style.css
agents/: README.md  ism_control_assessment_tool.py  main.py
be/: Dockerfile  README.md  ism_description_svc.py  main.py  requirements.txt  ssp_excel_updater.py
be/agents/: ism_control_assessment_tool.py  requirements.txt
be/data/: results.json
docs/: references.md  tools.md
helpers/: prepare_data.py
tests/: test_ism_control_assessment.py
